Do not build for any branch.

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,8 +2,8 @@ name: build_and_publish
 on:
   push:
     branches-ignore:
-      # prevent building on commits to main (use tag to build)
-      - 'main'
+      # prevent building on branches (use tag to build)
+      - '**'
     tags:
       # Build on every tag:
       - '**'
